--- a/Laravel/.env.prod
+++ b/Laravel/.env.prod
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_NAME=sugardaddy
+APP_ENV=production
+APP_KEY=base64:EsC0r22okxnyYAPX8uRyIcJRpKA0qk7gLZjxKeyLJMc=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
